<resources>
    <string name="app_name">Russian Museum</string>
    <string name="title_home">ГЛАВНАЯ</string>
    <string name="title_games">ИГРЫ</string>
    <string name="title_ar">ДОПОЛНЕННАЯ РЕАЛЬНОСТЬ</string>
    <string name="puzzles">ПАЗЛЫ</string>
    <string name="findObject">НАЙДИ ПРЕДМЕТ</string>
    <string name="guessGenre">ОПРЕДЕЛИ ЖАНР</string>
    <string name="guessNGenre">ОПРЕДЕЛИ\nЖАНР</string>
    <string name="guess_genre_small">Определи жанр</string>
    <string name="tests">ТЕСТЫ</string>
    <string name="age_14_and_more">14+ лет</string>
    <string name="age_8_13">8–13 лет</string>
    <string name="age_6_8">6–8 лет</string>
    <string name="one_genre_out_of_6">Один из 6\nжанров</string>
    <string name="one_genre_out_of_4">Один из 4\nжанров</string>
    <string name="one_genre_out_of_2">Один из 2\nжанров</string>
    <string name="well_done">Молодец!</string>
    <string name="exit">Выйти</string>
    <string name="you_found_object">Ты нашёл предмет</string>
    <string name="you_guessed_genre">Ты правильно определил жанр</string>
    <string name="you_solved_puzzles">Ты правильно составил пазлы</string>
    <string name="pass">Пройти</string>
    <string name="solved">Пройден</string>
    <string name="enter_again">Пройти ещё раз</string>
    <string name="results">Результаты</string>
    <string name="next">Далее</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="or">или</string>
    <string name="already_have_account">Уже есть аккаунт</string>
    <string name="try_again">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="e_mail">Электронная почта</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter_without_account">Войти без аккаунта</string>
</resources>