<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.raptors.russian_museum.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="ru.raptors.russian_museum.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" >
        <action
            android:id="@+id/action_navigation_dashboard_to_findObjectActivity"
            app:destination="@id/findObjectActivity" />
        <action
            android:id="@+id/action_navigation_games_to_puzzlesActivity"
            app:destination="@id/puzzlesActivity" />
        <action
            android:id="@+id/action_navigation_games_to_guessGenreChooseActivity"
            app:destination="@id/guessGenreChooseActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ar"
        android:name="ru.raptors.russian_museum.ui.ar.ARFragment"
        android:label="@string/title_ar"
        tools:layout="@layout/fragment_ar" />

    <activity
        android:id="@+id/findObjectActivity"
        android:name="ru.raptors.russian_museum.activities.FindObjectActivity"
        android:label="FindObjectActivity" />
    <activity
        android:id="@+id/puzzlesActivity"
        android:name="ru.raptors.russian_museum.activities.PuzzlesActivity"
        android:label="activity_puzzles"
        tools:layout="@layout/activity_puzzles" />
    <activity
        android:id="@+id/guessGenreChooseActivity"
        android:name="ru.raptors.russian_museum.activities.GuessGenreChooseActivity"
        android:label="activity_choose_guess_genre"
        tools:layout="@layout/activity_choose_guess_genre" />
</navigation>