<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".fragments.games.GamesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/toPuzzles"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="25dp"
            android:clickable="true"
            android:contentDescription="@string/puzzles"
            android:elevation="4dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toTopOf="@+id/toFindObject"
            app:layout_constraintEnd_toStartOf="@+id/toGuessGenre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futurademic"
                android:text="@string/puzzles"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableTopCompat="@drawable/ic_puzzles" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/toGuessGenre"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="25dp"
            android:clickable="true"
            android:contentDescription="@string/guessGenre"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card"
            android:elevation="4dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/toTests"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toPuzzles"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futurademic"
                android:text="@string/guessGenre"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableTopCompat="@drawable/ic_define_genre" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/toFindObject"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="25dp"
            android:clickable="true"
            android:contentDescription="@string/findObject"
            android:focusable="true"
            android:elevation="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toStartOf="@+id/toTests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toPuzzles">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futurademic"
                android:text="@string/findObject"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableTopCompat="@drawable/ic_find_object" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/toTests"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="25dp"
            android:clickable="true"
            android:contentDescription="@string/tests"
            android:focusable="true"
            android:elevation="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toFindObject"
            app:layout_constraintTop_toBottomOf="@+id/toGuessGenre">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/futurademic"
                android:text="@string/tests"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableTopCompat="@drawable/ic_quizes" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>