<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_test_selection"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="25dp"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/test_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/futurademic"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:maxLines="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/test_result_gradient"
            app:layout_constraintTop_toBottomOf="@id/test_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textColor="@color/black"
                android:fontFamily="@font/futurademic"
                android:textSize="20sp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/result_text"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/futuralightc_italic"
                android:textStyle="italic" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_solved"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:fontFamily="@font/futurademic"
            app:backgroundTint="@color/white"
            android:text="@string/solved"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_enter_test"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_enter_test"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/futurademic"
            app:backgroundTint="@color/white"
            android:text="@string/enter_again"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_solved" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>